--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,6 +226,10 @@ input[type=submit] {
     background-color: #123456;
     width: 100%;
   }
+  nav{
+    width: 100%;
+    position: center;
+  }
   #masthead{
     position: static;
   }
