--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ input[type=submit] {
   }
   nav{
     width: 100%;
-    position: center;
+    text-align: center;
   }
   #masthead{
     position: static;
