--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,8 @@ h3 {
 /* header */
 
 #masthead {
-  position: fixed;
+  position: absolute;
+  top: 0;
   z-index: 99;
   width: 100%;
   margin: 0 0 30px;
@@ -239,6 +240,12 @@ input[type=submit] {
   #main-container{
     padding-top: 5px;
   }
+  .auth-image{
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    height: auto;
+    }
 }
 
 @media screen and (max-width: 768px){
@@ -250,6 +257,9 @@ input[type=submit] {
   }
   #main-container{
     padding-top: 5px;
+  }
+  h1{
+    margin-top: 5px;
   }
 }
 
